Table user {
  id varchar(36) [pk, note: "UUID"]
  username varchar [not null, unique]
  email varchar [not null, unique]
  password varchar [not null]
}

Table party {
  id int [pk, increment]
  name varchar [not null]
  level int [default: 1]
  experience int [default: 0]
  user_id varchar(36) [not null, unique, ref: > user.id] // 1:1 — Party owns the FK
  // rating is computed: sum of all character ratings (not stored)
}

Table character {
  id int [pk, increment]
  name varchar [not null]
  party_id int [not null, ref: > party.id]
  current_job_id int [not null, ref: > job.id]
  // rating is computed: sum of equipped items' rating (not stored)
}

Table job {
  id int [pk, increment]
  name varchar [not null]
  icon varchar [not null] // path to icon image
}

Table equipment {
  id int [pk, increment]
  name varchar [not null]
  slot varchar [not null, note: "head | chest | primary_hand | secondary_hand | accesory"]
  equipment_type varchar [not null, note: "plate | leather | cloth"]
  rating int [default: 0]
}

Table character_equipment {
  id int [pk, increment]
  character_id int [not null, ref: > character.id]
  inventory_id int [not null, ref: > party_inventory.id]
  slot varchar [not null, note: "head | chest | primary_hand | secondary_hand | accesory"]

  Indexes {
    (character_id, slot) [unique] // one item per slot per character
  }
}

Table party_inventory {
  id int [pk, increment]
  party_id int [not null, ref: > party.id]
  equipment_id int [not null, ref: > equipment.id] // loot earned from explorations
}

Table dungeon {
  id int [pk, increment]
  name varchar [not null]
  description varchar
  image_path varchar
  rating int [not null, default: 0]
  min_rating int [not null, default: 0] // minimum party rating to attempt
  visibility_rating int [not null, default: 0] // minimum rating to see the dungeon
  duration int [not null, default: 60, note: "seconds the exploration takes"]
  loot json [note: "array of equipment IDs available as drops"]
}

Table exploration {
  id int [pk, increment]
  party_id int [not null, ref: > party.id]
  dungeon_id int [not null, ref: > dungeon.id]
  started_at timestamp [not null]
  ends_at timestamp [not null]
  status varchar [not null, default: "in_progress", note: "in_progress | completed"]
  result json [note: "{ success: bool, loot: [...] } — populated on completion"]
}
